--- a/openatlas/static/css/style.css
+++ b/openatlas/static/css/style.css
@@ -412,6 +412,14 @@ form div.table-row div.table-cell div {
     margin-top: 0.3em;
 }
 
+table td {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 500px;
+}
+
+/*forms*/
 label.error {
     padding-left: 0.5em;
 }
@@ -553,3 +561,5 @@ div.data-table div.display-none {
 .toolbar {
     margin-bottom: 5px;
 }
+
+/*datatables
