--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -176,8 +176,8 @@
     {% endif %}
 {% endwith %}
 <main>
-    <div id="content">
-        <div style="float:left">{% block content %}{% endblock %}</div>
+    <div id="content" >
+        <div style="float:left" class="container">{% block content %}{% endblock %}</div>
         {% if session['settings']['debug_mode'] and 'admin'|is_authorized %}
             <div class="data-table" style="float:right;margin:1em;">
                 <p>Debug</p>
