--- a/openatlas/templates/search/index.html
+++ b/openatlas/templates/search/index.html
@@ -25,7 +25,7 @@
             <h2>{{ _('classes')|uc_first }}</h2>
             <p id="select_all" class="select_all">{{ _('deselect all')|uc_first }}</p>
             {{ form.classes }}
-            {{ form.search }}
+            {{ form.search(class_=config['CSS']['button']['primary']) }}
         </form>
     </div>
     <div style="float:left;margin-left: 1em;">
