--- a/openatlas/templates/user/insert.html
+++ b/openatlas/templates/user/insert.html
@@ -7,7 +7,7 @@
     <script>
         $(document).ready(function () {
             $("#show_passwords").after(function() {
-              return '<span class="btn btn-outline-primary btn-sm" id="generate-password">{{ _('generate password')|uc_first }}</span>';
+                return '<span class="{{ config['CSS']['button']['primary'] }}" id="generate-password">{{ _('generate password')|uc_first }}</span>';
             });
         });
     </script>
