Return Markup at display_form filter

--- a/openatlas/templates/admin/file.html
+++ b/openatlas/templates/admin/file.html
@@ -6,5 +6,5 @@
     <div class="toolbar">
         {{ 'Files'|manual_link|safe }}
     </div>
-    {{ form|display_form|safe }}
+    {{ form|display_form }}
 {% endblock %}
