--- a/openatlas/templates/admin/logo.html
+++ b/openatlas/templates/admin/logo.html
@@ -10,7 +10,7 @@
         {% endif %}
     </div>
     {% if form %}
-        {{ form|display_form|safe }}
+        {{ form|display_form }}
     {% else %}
         <img alt="logo" src="{{ url_for('display_file', filename=filename) }}">
     {% endif %}
