--- a/openatlas/templates/file/update.html
+++ b/openatlas/templates/file/update.html
@@ -3,5 +3,5 @@
     {{ [[_('files'), 'file_index'], file, _('edit')]|crumb }}
 {% endblock %}
 {% block content %}
-    {{ form|display_form|safe }}
+    {{ form|display_form }}
 {% endblock %}
