--- a/openatlas/templates/hierarchy/update.html
+++ b/openatlas/templates/hierarchy/update.html
@@ -4,5 +4,5 @@
 {% endblock %}
 {% block content %}
     {{ table.display()|safe }}
-    {{ form|display_form|safe }}
+    {{ form|display_form }}
 {% endblock %}
