--- a/openatlas/templates/reference/add.html
+++ b/openatlas/templates/reference/add.html
@@ -3,5 +3,5 @@
     {{ [[_('reference'), 'reference_index'], reference, _('add')]|crumb }}
 {% endblock %}
 {% block content %}
-    {{ form|display_form|safe }}
+    {{ form|display_form }}
 {% endblock %}
