--- a/openatlas/templates/relation/update.html
+++ b/openatlas/templates/relation/update.html
@@ -3,5 +3,5 @@
     {{ [[_('actor'), 'actor_index'], origin, related, _('edit')]|crumb }}
 {% endblock %}
 {% block content %}
-    {{ form|display_form|safe }}
+    {{ form|display_form }}
 {% endblock %}
