--- a/openatlas/templates/translation/update.html
+++ b/openatlas/templates/translation/update.html
@@ -3,5 +3,5 @@
     {{ [[_('source'), 'source_index'], source, translation, _('edit')]|crumb }}
 {% endblock %}
 {% block content %}
-    {{ form|display_form|safe }}
+    {{ form|display_form }}
 {% endblock %}
