--- a/openatlas/templates/types/insert.html
+++ b/openatlas/templates/types/insert.html
@@ -3,5 +3,5 @@
     {{ [[_('types'), 'node_index'], root, '+']|crumb }}
 {% endblock %}
 {% block content %}
-    {{ form|display_form|safe }}
+    {{ form|display_form }}
 {% endblock %}
