--- a/openatlas/templates/admin/check_similar.html
+++ b/openatlas/templates/admin/check_similar.html
@@ -6,7 +6,7 @@
     <div class="toolbar">
         {{ 'Data_integrity'|manual_link|safe }}
     </div>
-    {{ form|display_form|safe }}
+    {{ form|display_form }}
     {% if table %}
         {% if table.rows %}
             {{ table.display()|safe }}
