--- a/openatlas/templates/admin/mail.html
+++ b/openatlas/templates/admin/mail.html
@@ -17,6 +17,6 @@
         {% endfor %}
     </div>
     {% if settings['mail'] %}
-        {{ form|display_form|safe }}
+        {{ form|display_form }}
     {% endif %}
 {% endblock %}
