--- a/openatlas/templates/admin/mail_update.html
+++ b/openatlas/templates/admin/mail_update.html
@@ -3,5 +3,5 @@
     {{ [[_('admin'), 'admin_index'], [_('mail'), 'admin_mail'], _('edit')]|crumb }}
 {% endblock %}
 {% block content %}
-    {{ form|display_form|safe }}
+    {{ form|display_form }}
 {% endblock %}
