--- a/openatlas/templates/admin/map.html
+++ b/openatlas/templates/admin/map.html
@@ -6,5 +6,5 @@
     <div class="toolbar">
         {{ 'Map'|manual_link|safe }}
     </div>
-    {{ form|display_form|safe }}
+    {{ form|display_form }}
 {% endblock %}
