--- a/openatlas/templates/hierarchy/insert.html
+++ b/openatlas/templates/hierarchy/insert.html
@@ -3,5 +3,5 @@
     {{ [[_('types'), 'node_index'], '+ ' + _(param).capitalize()]|crumb }}
 {% endblock %}
 {% block content %}
-    {{ form|display_form|safe }}
+    {{ form|display_form }}
 {% endblock %}
