--- a/openatlas/templates/import/import_data.html
+++ b/openatlas/templates/import/import_data.html
@@ -21,7 +21,7 @@
             <span style="font-weight: bold;">csv</span> -
             {{ _('example files')|uc_first }}: <a href="/static/import/example.csv">example.csv</a>
         </p>
-        {{ form|display_form|safe }}
+        {{ form|display_form }}
         {% for item in messages['error'] %}
             <span class="error">{{ _('error')|uc_first }} - {{ item }}</span><br>
         {% endfor %}
