--- a/openatlas/templates/import/project_insert.html
+++ b/openatlas/templates/import/project_insert.html
@@ -3,5 +3,5 @@
     {{ [[_('admin'), 'admin_index'], [_('import'), 'import_index'], _('project')]|crumb }}
 {% endblock %}
 {% block content %}
-    {{ form|display_form|safe }}
+    {{ form|display_form }}
 {% endblock %}
