--- a/openatlas/templates/import/project_update.html
+++ b/openatlas/templates/import/project_update.html
@@ -3,5 +3,5 @@
     {{ [[_('admin'), 'admin_index'], [_('import'), 'import_index'], project, _('edit')]|crumb }}
 {% endblock %}
 {% block content %}
-    {{ form|display_form|safe }}
+    {{ form|display_form }}
 {% endblock %}
