--- a/openatlas/templates/involvement/insert.html
+++ b/openatlas/templates/involvement/insert.html
@@ -3,5 +3,5 @@
     {{ [[_(origin.view_name), origin.view_name + '_index'], origin, _('involvement')]|crumb }}
 {% endblock %}
 {% block content %}
-    {{ form|display_form|safe }}
+    {{ form|display_form }}
 {% endblock %}
