--- a/openatlas/templates/member/insert.html
+++ b/openatlas/templates/member/insert.html
@@ -3,5 +3,5 @@
     {{ [[_('actor'), 'actor_index'], origin, '+' + _('member'.capitalize())]|crumb }}
 {% endblock %}
 {% block content %}
-    {{ form|display_form|safe }}
+    {{ form|display_form }}
 {% endblock %}
