--- a/openatlas/templates/note/update.html
+++ b/openatlas/templates/note/update.html
@@ -6,5 +6,5 @@
     <div>
             <a class="btn btn-outline-primary btn-sm" href="{{ url_for('note_delete', entity_id=entity.id) }}" onclick="return confirm('{{ _('Delete note?') }}');">{{ _('delete')|uc_first }}</a>
     </div>
-    {{ form|display_form|safe }}
+    {{ form|display_form }}
 {% endblock %}
