--- a/openatlas/templates/place/map_draw.html
+++ b/openatlas/templates/place/map_draw.html
@@ -1,5 +1,5 @@
 <div id='map-info-display' style="float:left;">
-    {{ form|display_form|safe }}
+    {{ form|display_form }}
 </div>
 <div id="map" class="map"></div>
 <link rel="stylesheet" href="/static/vendor/leaflet-1.3.4/Leaflet.draw-1.0.2.css">
