--- a/openatlas/templates/source/update.html
+++ b/openatlas/templates/source/update.html
@@ -11,5 +11,5 @@
             <a class="btn btn-outline-primary btn-sm" href="{{ url_for('source_update', id_=source.id) }}">{{ _('reload')|uc_first }}</a>
         </p>
     {% endif %}
-    {{ form|display_form|safe }}
+    {{ form|display_form }}
 {% endblock %}
