--- a/openatlas/templates/sql/execute.html
+++ b/openatlas/templates/sql/execute.html
@@ -18,7 +18,7 @@
             <a href="{{ url_for('export_sql') }}">{{ _('here') }}</a>.
         </p>
     {% else %}
-        {{ form|display_form|safe }}
+        {{ form|display_form }}
         <p>
             {{ response|safe }}
         </p>
