--- a/openatlas/templates/translation/insert.html
+++ b/openatlas/templates/translation/insert.html
@@ -3,5 +3,5 @@
     {{ [[_('source'), 'source_index'], source, '+ ' + _('text').capitalize()]|crumb }}
 {% endblock %}
 {% block content %}
-    {{ form|display_form|safe }}
+    {{ form|display_form }}
 {% endblock %}
