--- a/openatlas/templates/admin/general_update.html
+++ b/openatlas/templates/admin/general_update.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
     <div class="toolbar">
-        {{ 'General'|manual_link|safe }}
+        {{ 'General'|manual_link }}
     </div>
     {{ form|display_form }}
     {% for field, errors in form.errors.items() %}
