--- a/openatlas/templates/admin/logo.html
+++ b/openatlas/templates/admin/logo.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
     <div class="toolbar">
-        {{ 'Logo'|manual_link|safe }}
+        {{ 'Logo'|manual_link }}
         {% if not form %}
             <a class="btn btn-outline-primary btn-sm" href="{{ url_for('admin_logo', action='remove') }}">{{ _('remove logo')|uc_first }}</a>
         {% endif %}
