--- a/openatlas/templates/admin/map.html
+++ b/openatlas/templates/admin/map.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
     <div class="toolbar">
-        {{ 'Map'|manual_link|safe }}
+        {{ 'Map'|manual_link }}
     </div>
     {{ form|display_form }}
 {% endblock %}
