--- a/openatlas/templates/content/index.html
+++ b/openatlas/templates/content/index.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
     <div class="toolbar">
-        {{ 'Content'|manual_link|safe }}
+        {{ 'Content'|manual_link }}
     </div>
     {{ table.display()|safe }}
 {% endblock %}
