--- a/openatlas/templates/export/export_csv.html
+++ b/openatlas/templates/export/export_csv.html
@@ -5,7 +5,7 @@
 {% block content %}
     {% if writeable %}
         <div style="float:left;margin-right: 1em;">
-            {{ 'Export'|manual_link|safe }}
+            {{ 'Export'|manual_link }}
             {{ form|display_form }}
         </div>
     {% else %}
