--- a/openatlas/templates/export/export_sql.html
+++ b/openatlas/templates/export/export_sql.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
     <div class="toolbar">
-        {{ 'Export'|manual_link|safe }}
+        {{ 'Export'|manual_link }}
     </div>
     {% if writeable %}
         {{ form|display_form }}
