--- a/openatlas/templates/index/changelog.html
+++ b/openatlas/templates/index/changelog.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
     <div class="toolbar">
-        {{ 'Features_Versioning_and_Roadmap'|manual_link|safe }}
+        {{ 'Features_Versioning_and_Roadmap'|manual_link }}
     </div>
     {% for version_name, version in versions.items() %}
         <div class="changelog-version">
