--- a/openatlas/templates/model/network2.html
+++ b/openatlas/templates/model/network2.html
@@ -44,7 +44,7 @@
     {% endif %}
     <div style="float:left;">
         <div class="toolbar">
-            {{ 'Network_visualization'|manual_link|safe }}
+            {{ 'Network_visualization'|manual_link }}
         </div>
         <form method="post" id="network-form" style="margin-right:1em;">
             {{ form.csrf_token }}
