--- a/openatlas/templates/profile/update.html
+++ b/openatlas/templates/profile/update.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
     <div class="toolbar">
-        {{ 'Profile'|manual_link|safe }}
+        {{ 'Profile'|manual_link }}
     </div>
     <form method="post">
         {{ form.csrf_token }}
