--- a/openatlas/templates/sql/execute.html
+++ b/openatlas/templates/sql/execute.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
     <div class="toolbar">
-        {{ 'SQL'|manual_link|safe }}
+        {{ 'SQL'|manual_link }}
         {% if file_data['file'] %}
             <p style="margin-top: 1em;">
                 {{ _('latest backup')|uc_first }}: {{ file_data['file'] }}, {{ file_data['size'] }},
