--- a/openatlas/templates/sql/index.html
+++ b/openatlas/templates/sql/index.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
     <div class="toolbar">
-        {{ 'SQL'|manual_link|safe }}
+        {{ 'SQL'|manual_link }}
     </div>
     <h2 class="error">
         {{ _('Warning: direct database manipulation is dangerous and can result in data loss and/or an unusable application!') }}
