--- a/openatlas/templates/types/index.html
+++ b/openatlas/templates/types/index.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
     <div class="toolbar">
-        {{ 'Form_field_type'|manual_link|safe }}
+        {{ 'Form_field_type'|manual_link }}
     </div>
     <div id="tabs-menu" class="tabs-container">
         <ul>
