--- a/openatlas/templates/user/index.html
+++ b/openatlas/templates/user/index.html
@@ -5,7 +5,7 @@
 {% block content %}
     {% if 'manager'|is_authorized %}
         <div class="toolbar">
-            {{ 'User'|manual_link|safe }}
+            {{ 'User'|manual_link }}
             <a class="btn btn-outline-primary btn-sm" href="{{ url_for('user_insert') }}">+ {{ _('user')|uc_first }}</a>
         </div>
     {% endif %}
