--- a/openatlas/templates/actor/index.html
+++ b/openatlas/templates/actor/index.html
@@ -5,7 +5,7 @@
 {% block content %}
     {% if 'contributor'|is_authorized %}
         <div class="toolbar">
-            {{ 'Actor'|manual_link|safe }}
+            {{ 'Actor'|manual_link }}
             {% for code in config['CLASS_CODES']['actor'] %}
                 {{ ('+ ' + code|get_class_name)|button(url_for('actor_insert', code=code)) }}
             {% endfor %}
