--- a/openatlas/templates/admin/check_dates.html
+++ b/openatlas/templates/admin/check_dates.html
@@ -3,7 +3,7 @@
     {{ [[_('admin'), 'admin_index'], _('check dates')]|crumb }}
 {% endblock %}
 {% block content %}
-{{ 'Data_integrity'|manual_link|safe }}
+{{ 'Data_integrity'|manual_link }}
 <div id="tabs" class="tabs-container">
     <ul>
         <li><a href="#tab-dates">{{ _('invalid dates')|uc_first }} {{ tables['dates']|format_tab_number|safe }}</a></li>
