--- a/openatlas/templates/admin/mail.html
+++ b/openatlas/templates/admin/mail.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
     <div class="toolbar">
-        {{ 'Mail'|manual_link|safe }}
+        {{ 'Mail'|manual_link }}
         <a class="btn btn-outline-primary btn-sm" href="{{ url_for('admin_mail_update') }}">{{ _('edit')|uc_first }}</a>
     </div>
     <div class="data-table">
