--- a/openatlas/templates/admin/orphans.html
+++ b/openatlas/templates/admin/orphans.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
 <div class="toolbar">
-    {{ 'Data_integrity'|manual_link|safe }}
+    {{ 'Data_integrity'|manual_link }}
 </div>
 <div id="tabs" class="tabs-container">
     <ul>
