--- a/openatlas/templates/import/import_data.html
+++ b/openatlas/templates/import/import_data.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
     <div class="toolbar">
-        {{ 'Import'|manual_link|safe }}
+        {{ 'Import'|manual_link }}
         {% if file_data['file'] %}
             {{ _('latest backup')|uc_first }}: {{ file_data['file'] }}, {{ file_data['size'] }}
             <a class="btn btn-outline-primary btn-sm" href="{{ url_for('download_sql', filename=file_data['file']) }}">{{ _('download')|uc_first }}</a>
