--- a/openatlas/templates/object/index.html
+++ b/openatlas/templates/object/index.html
@@ -5,7 +5,7 @@
 {% block content %}
     {% if 'contributor'|is_authorized %}
         <div class="toolbar">
-            {{ 'Object'|manual_link|safe }}
+            {{ 'Object'|manual_link }}
             <a class="btn btn-outline-primary btn-sm" href="{{ url_for('object_insert') }}">+ {{ 'E84'|get_class_name }}</a>
         </div>
     {% endif %}
