--- a/openatlas/templates/search/index.html
+++ b/openatlas/templates/search/index.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
     <div class="toolbar">
-        {{ 'Search'|manual_link|safe }}
+        {{ 'Search'|manual_link }}
     </div>
     <div style="float:left;">
         <form method="post">
