--- a/openatlas/templates/source/index.html
+++ b/openatlas/templates/source/index.html
@@ -5,7 +5,7 @@
 {% block content %}
     {% if 'contributor'|is_authorized %}
         <div class="toolbar">
-            {{ 'source'|manual_link|safe }}
+            {{ 'source'|manual_link }}
             <a class="btn btn-outline-primary btn-sm" href="{{ url_for('source_insert') }}">+ {{ _('source')|uc_first }}</a>
         </div>
     {% endif %}
