--- a/openatlas/templates/admin/general.html
+++ b/openatlas/templates/admin/general.html
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="toolbar">
         {{ 'General'|manual_link }}
-        <a class="btn btn-outline-primary btn-sm" href="{{ url_for('admin_general_update') }}">{{ _('edit')|uc_first }}</a>
+        {{ _('edit')|button(url_for('admin_general_update')) }}
     </div>
     <div class="data-table">
         {% for name, value in general_settings.items() %}
