--- a/openatlas/templates/admin/log.html
+++ b/openatlas/templates/admin/log.html
@@ -4,8 +4,7 @@
 {% endblock %}
 {% block content %}
     <div class="toolbar">
-        <a class="btn btn-outline-primary btn-sm" onclick="return confirm('{{_('delete all logs?')|uc_first }}')"
-            href="{{ url_for('admin_log_delete') }}">{{ _('delete all')|uc_first }}</a>
+        {{ _('delete all logs')|button(url_for('admin_log_delete'), js='onclick="return confirm(\'' + _('delete all logs')|uc_first + '?\')"') }}
     </div>
     {{ form|display_form }}
     {{ table.display()|safe }}
