--- a/openatlas/templates/place/view.html
+++ b/openatlas/templates/place/view.html
@@ -8,134 +8,127 @@
         object_.name]|crumb }}
 {% endblock %}
 {% block content %}
-<div id="tabs" class="tabs-container">
-    <ul>
-        <li><a href="#tab-info">{{ _('info')|uc_first }}</a></li>
-        {% if gis_data %}
-            <li><a href="#tab-map" id="map-tab-id">{{ _('map')|uc_first }}</a></li>
-        {% endif %}
-        <li><a href="#tab-source">{{ _('source')|uc_first }} {{ tables['source']|format_tab_number|safe }}</a></li>
-        <li><a href="#tab-event">{{ _('event')|uc_first }} {{ tables['event']|format_tab_number|safe }}</a></li>
-        {% if tables['actor'].rows %}
-            <li><a href="#tab-actor">{{ _('actor')|uc_first }} {{ tables['actor']|format_tab_number|safe }}</a></li>
-        {% endif %}
-        <li><a href="#tab-reference">{{ _('reference')|uc_first }} {{ tables['reference']|format_tab_number|safe }}</a></li>
-        <li><a href="#tab-file">{{ _('files')|uc_first }} {{ tables['file']|format_tab_number|safe }}</a></li>
-        {% if object_.system_type == 'place' %}
-            <li><a href="#tab-feature">{{ _('feature')|uc_first }} {{ tables['feature']|format_tab_number|safe }}</a></li>
-        {% elif object_.system_type == 'feature' %}
-            <li><a href="#tab-stratigraphic-unit">{{ _('stratigraphic unit')|uc_first }} {{ tables['stratigraphic-unit']|format_tab_number|safe }}</a></li>
-        {% elif object_.system_type == 'stratigraphic unit' %}
-            <li><a href="#tab-find">{{ _('find')|uc_first }} {{ tables['find']|format_tab_number|safe }}</a></li>
-            <li><a href="#tab-human-remains">{{ _('human remains')|uc_first }} {{ tables['human-remains']|format_tab_number|safe }}</a></li>
-        {% endif %}
-    </ul>
-    <div id="tab-info">
-        <div class="toolbar">
-            {% if 'contributor'|is_authorized %}
-                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_update', id_=object_.id) }}">{{ _('edit')|uc_first }}</a>
-                {% if not subunits %}
-                    {{ object_|display_delete_link|safe }}
-                {% endif %}
+<div class="row">
+    <div id="tabs" class="tabs-container col">
+        <ul>
+            <li><a href="#tab-info">{{ _('info')|uc_first }}</a></li>
+            <li><a href="#tab-source">{{ _('source')|uc_first }} {{ tables['source']|format_tab_number|safe }}</a></li>
+            <li><a href="#tab-event">{{ _('event')|uc_first }} {{ tables['event']|format_tab_number|safe }}</a></li>
+            {% if tables['actor'].rows %}
+                <li><a href="#tab-actor">{{ _('actor')|uc_first }} {{ tables['actor']|format_tab_number|safe }}</a></li>
             {% endif %}
-            {{ object_.id|bookmark_toggle|safe }}
-        </div>
-        <h1>{{ object_.name }}</h1>
-        <div>
-            {{ profile_image_id|display_profile_image|safe }}
-            <div style="float:left;">
-                {{ info|display_info|safe }}
-                {{ object_|note|safe }}
-                {{ object_|display_external_references|safe }}
-                {{ object_|description|safe }}
-                {{ object_|api_link|safe }}
-            </div>
-            <div style="clear:both;"></div>
-        </div>
-    </div>
-    {% if gis_data %}
-        <div id="tab-map">
-            <div id="map" class="map" style="float:none;margin:0;width:70em;"></div>
-        </div>
-        <script src="/static/js/map/map.js"></script>
-        <script>
-            /* workaround for leaflet bug when map not in the first tab */
-            $("body").on('click','#map-tab-id', function() {
-                map.panBy(new L.Point(0, -1));
-            });
-        </script>
-    {% endif %}
-    <div id="tab-source">
-        {% if 'contributor'|is_authorized %}
-        <div class="toolbar">
-            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_add_source', id_=object_.id) }}">{{ _('add')|uc_first }}</a>
-            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('source_insert', origin_id=object_.id) }}">+ {{ _('source')|uc_first }}</a>
-        </div>
-        {% endif %}
-        {{ tables['source'].display('source')|safe }}
-    </div>
-    <div id="tab-event">
-        {% if 'contributor'|is_authorized %}
+            <li><a href="#tab-reference">{{ _('reference')|uc_first }} {{ tables['reference']|format_tab_number|safe }}</a></li>
+            <li><a href="#tab-file">{{ _('files')|uc_first }} {{ tables['file']|format_tab_number|safe }}</a></li>
+            {% if object_.system_type == 'place' %}
+                <li><a href="#tab-feature">{{ _('feature')|uc_first }} {{ tables['feature']|format_tab_number|safe }}</a></li>
+            {% elif object_.system_type == 'feature' %}
+                <li><a href="#tab-stratigraphic-unit">{{ _('stratigraphic unit')|uc_first }} {{ tables['stratigraphic-unit']|format_tab_number|safe }}</a></li>
+            {% elif object_.system_type == 'stratigraphic unit' %}
+                <li><a href="#tab-find">{{ _('find')|uc_first }} {{ tables['find']|format_tab_number|safe }}</a></li>
+                <li><a href="#tab-human-remains">{{ _('human remains')|uc_first }} {{ tables['human-remains']|format_tab_number|safe }}</a></li>
+            {% endif %}
+        </ul>
+        <div id="tab-info">
             <div class="toolbar">
-                {% for code in config['CLASS_CODES']['event'] %}
-                    <a class="btn btn-outline-primary btn-sm" href="{{ url_for('event_insert', code=code, origin_id=object_.id) }}">+ {{ code|get_class_name }}</a>
-                {% endfor %}
+                {% if 'contributor'|is_authorized %}
+                    <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_update', id_=object_.id) }}">{{ _('edit')|uc_first }}</a>
+                    {% if not subunits %}
+                        {{ object_|display_delete_link|safe }}
+                    {% endif %}
+                {% endif %}
+                {{ object_.id|bookmark_toggle|safe }}
             </div>
-        {% endif %}
-        {{ tables['event'].display('event')|safe }}
-    </div>
-    {% if tables['actor'].rows %}
-        <div id="tab-actor">
-            {{ tables['actor'].display('actor')|safe }}
+            <h1>{{ object_.name }}</h1>
+            <div>
+                {{ profile_image_id|display_profile_image|safe }}
+                <div style="float:left;">
+                    {{ info|display_info|safe }}
+                    {{ object_|note|safe }}
+                    {{ object_|display_external_references|safe }}
+                    {{ object_|description|safe }}
+                    {{ object_|api_link|safe }}
+                </div>
+                <div style="clear:both;"></div>
+            </div>
         </div>
-    {% endif %}
-    <div id="tab-reference">
-        {% if 'contributor'|is_authorized %}
+        <div id="tab-source">
+            {% if 'contributor'|is_authorized %}
             <div class="toolbar">
-                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_add_reference', id_=object_.id)}}">{{ _('add')|uc_first }}</a>
-                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('reference_insert', code='bibliography', origin_id=object_.id) }}">+ {{ _('bibliography')|uc_first }}</a>
-                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('reference_insert', code='edition', origin_id=object_.id) }}">+ {{ _('edition')|uc_first }}</a>
-                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('reference_insert', code='external_reference', origin_id=object_.id) }}">+ {{ _('external reference')|uc_first }}</a>
+                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_add_source', id_=object_.id) }}">{{ _('add')|uc_first }}</a>
+                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('source_insert', origin_id=object_.id) }}">+ {{ _('source')|uc_first }}</a>
+            </div>
+            {% endif %}
+            {{ tables['source'].display('source')|safe }}
+        </div>
+        <div id="tab-event">
+            {% if 'contributor'|is_authorized %}
+                <div class="toolbar">
+                    {% for code in config['CLASS_CODES']['event'] %}
+                        <a class="btn btn-outline-primary btn-sm" href="{{ url_for('event_insert', code=code, origin_id=object_.id) }}">+ {{ code|get_class_name }}</a>
+                    {% endfor %}
+                </div>
+            {% endif %}
+            {{ tables['event'].display('event')|safe }}
+        </div>
+        {% if tables['actor'].rows %}
+            <div id="tab-actor">
+                {{ tables['actor'].display('actor')|safe }}
             </div>
         {% endif %}
-        {{ tables['reference'].display('reference')|safe }}
-    </div>
-    <div id="tab-file">
-        {% if 'contributor'|is_authorized %}
-            <div class="toolbar">
-                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_add_file', id_=object_.id)}}">{{ _('add')|uc_first }}</a>
-                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('file_insert', origin_id=object_.id) }}">+ {{ _('file')|uc_first }}</a>
+        <div id="tab-reference">
+            {% if 'contributor'|is_authorized %}
+                <div class="toolbar">
+                    <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_add_reference', id_=object_.id)}}">{{ _('add')|uc_first }}</a>
+                    <a class="btn btn-outline-primary btn-sm" href="{{ url_for('reference_insert', code='bibliography', origin_id=object_.id) }}">+ {{ _('bibliography')|uc_first }}</a>
+                    <a class="btn btn-outline-primary btn-sm" href="{{ url_for('reference_insert', code='edition', origin_id=object_.id) }}">+ {{ _('edition')|uc_first }}</a>
+                    <a class="btn btn-outline-primary btn-sm" href="{{ url_for('reference_insert', code='external_reference', origin_id=object_.id) }}">+ {{ _('external reference')|uc_first }}</a>
+                </div>
+            {% endif %}
+            {{ tables['reference'].display('reference')|safe }}
+        </div>
+        <div id="tab-file">
+            {% if 'contributor'|is_authorized %}
+                <div class="toolbar">
+                    <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_add_file', id_=object_.id)}}">{{ _('add')|uc_first }}</a>
+                    <a class="btn btn-outline-primary btn-sm" href="{{ url_for('file_insert', origin_id=object_.id) }}">+ {{ _('file')|uc_first }}</a>
+                </div>
+            {% endif %}
+            {{ tables['file'].display('file')|safe }}
+        </div>
+        {% if object_.system_type == 'place' %}
+            <div id="tab-feature">
+                <div class="toolbar">
+                    <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_insert', origin_id=object_.id)}}">+ {{ _('feature')|uc_first }}</a>
+                </div>
+                {{ tables['feature'].display('feature')|safe }}
+            </div>
+        {% elif object_.system_type == 'feature' %}
+            <div id="tab-stratigraphic-unit">
+                <div class="toolbar">
+                    <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_insert', origin_id=object_.id)}}">+ {{ _('stratigraphic unit')|uc_first }}</a>
+                </div>
+                {{ tables['stratigraphic-unit'].display('stratigraphic-unit')|safe }}
+            </div>
+        {% elif object_.system_type == 'stratigraphic unit' %}
+            <div id="tab-find">
+                <div class="toolbar">
+                    <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_insert', origin_id=object_.id)}}">+ {{ _('find')|uc_first }}</a>
+                </div>
+                {{ tables['find'].display('find')|safe }}
+            </div>
+            <div id="tab-human-remains">
+                <div class="toolbar">
+                    <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_insert', origin_id=object_.id, system_type='human_remains')}}">+ {{ _('human remains')|uc_first }}</a>
+                </div>
+                {{ tables['human-remains'].display('human_remains')|safe }}
             </div>
         {% endif %}
-        {{ tables['file'].display('file')|safe }}
     </div>
-    {% if object_.system_type == 'place' %}
-        <div id="tab-feature">
-            <div class="toolbar">
-                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_insert', origin_id=object_.id)}}">+ {{ _('feature')|uc_first }}</a>
-            </div>
-            {{ tables['feature'].display('feature')|safe }}
-        </div>
-    {% elif object_.system_type == 'feature' %}
-        <div id="tab-stratigraphic-unit">
-            <div class="toolbar">
-                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_insert', origin_id=object_.id)}}">+ {{ _('stratigraphic unit')|uc_first }}</a>
-            </div>
-            {{ tables['stratigraphic-unit'].display('stratigraphic-unit')|safe }}
-        </div>
-    {% elif object_.system_type == 'stratigraphic unit' %}
-        <div id="tab-find">
-            <div class="toolbar">
-                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_insert', origin_id=object_.id)}}">+ {{ _('find')|uc_first }}</a>
-            </div>
-            {{ tables['find'].display('find')|safe }}
-        </div>
-        <div id="tab-human-remains">
-            <div class="toolbar">
-                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_insert', origin_id=object_.id, system_type='human_remains')}}">+ {{ _('human remains')|uc_first }}</a>
-            </div>
-            {{ tables['human-remains'].display('human_remains')|safe }}
-        </div>
-    {% endif %}
+    <div class="col">
+        {% if gis_data %}
+            <div id="map" class="map"></div>
+            <script src="/static/js/map/map.js"></script>
+        {% endif %}
+    </div>
 </div>
 {% endblock %}
