Admin content: bootstrap buttons, removed inverse-header css

--- a/openatlas/templates/content/update.html
+++ b/openatlas/templates/content/update.html
@@ -9,7 +9,7 @@
     <form method="post">
         {{ form.csrf_token }}
         {% for language in languages %}
-            <p class="inverse-heading">{{ language|upper }}</p>
+            <p>{{ language|upper }}</p>
             {{ form[language](class='tinymce') }}<br>
         {% endfor %}
         <p>
