--- a/openatlas/templates/event/index.html
+++ b/openatlas/templates/event/index.html
@@ -7,7 +7,7 @@
         <div class="toolbar">
             {{ 'Event'|manual_link }}
             {% for code in config['CLASS_CODES']['event'] %}
-                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('event_insert', code=code) }}">+ {{ code|get_class_name }}</a>
+                {{ code|get_class_name|button(url_for('event_insert', code=code)) }}
             {% endfor %}
         </div>
     {% endif %}
