--- a/openatlas/templates/event/update.html
+++ b/openatlas/templates/event/update.html
@@ -8,9 +8,9 @@
         <p class="error">
             {{ _('error modified by %(username)s', username=modifier|safe) }}
         </p>
-        <p>
-            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('event_update', id_=event.id) }}">{{ _('reload')|uc_first }}</a>
-        </p>
+        <div class="toolbar">
+            {{ _('reload')|button(url_for('event_update', id_=event.id)) }}
+        </div>
     {% endif %}
     {{ form|display_form }}
 {% endblock %}
