--- a/openatlas/templates/file/insert.html
+++ b/openatlas/templates/file/insert.html
@@ -9,10 +9,8 @@
 {% block content %}
     <p>
         {{ _('max size')|uc_first }}:
-        <span style="font-weight: bold;">{{ session['settings']['file_upload_max_size'] }} MB</span>
-        - {{ _('if exceeded you will receive a connection error')|uc_first }}.
-    </p>
-    <p>
+        <span style="font-weight: bold;">{{ session['settings']['file_upload_max_size'] }} MB</span>.
+        {{ _('if exceeded you will receive a connection error')|uc_first }}.
         {{ _('allowed extensions')|uc_first }}:
         <span style="font-weight: bold;">{{ session['settings']['file_upload_allowed_extension'] }}</span>
     </p>
