--- a/openatlas/templates/actor/view.html
+++ b/openatlas/templates/actor/view.html
@@ -7,26 +7,26 @@
 <div id="tabs" class="tabs-container">
     <ul>
         <li><a href="#tab-info">{{ _('info')|uc_first }}</a></li>
-        <li><a href="#tab-source">{{ _('source')|uc_first }} {{ tables['source']|format_tab_number|safe }}</a></li>
-        <li><a href="#tab-event">{{ _('event')|uc_first }} {{ tables['event']|format_tab_number|safe }}</a></li>
-        <li><a href="#tab-relation">{{ _('relation')|uc_first }} {{ tables['relation']|format_tab_number|safe }}</a></li>
-        <li><a href="#tab-member-of">{{ _('member of')|uc_first }} {{ tables['member_of']|format_tab_number|safe }}</a></li>
+        <li><a href="#tab-source">{{ _('source')|uc_first }} {{ tables['source']|format_tab_number }}</a></li>
+        <li><a href="#tab-event">{{ _('event')|uc_first }} {{ tables['event']|format_tab_number }}</a></li>
+        <li><a href="#tab-relation">{{ _('relation')|uc_first }} {{ tables['relation']|format_tab_number }}</a></li>
+        <li><a href="#tab-member-of">{{ _('member of')|uc_first }} {{ tables['member_of']|format_tab_number }}</a></li>
         {% if tables['member'] %}
-            <li><a href="#tab-member">{{ _('member')|uc_first }} {{ tables['member']|format_tab_number|safe }}</a></li>
+            <li><a href="#tab-member">{{ _('member')|uc_first }} {{ tables['member']|format_tab_number }}</a></li>
         {% endif %}
-        <li><a href="#tab-reference">{{ _('reference')|uc_first }} {{ tables['reference']|format_tab_number|safe }}</a></li>
+        <li><a href="#tab-reference">{{ _('reference')|uc_first }} {{ tables['reference']|format_tab_number }}</a></li>
         {% if gis_data %}
             <li><a href="#tab-map" id="map-tab-id">{{ _('map')|uc_first }}</a></li>
         {% endif %}
-        <li><a href="#tab-file">{{ _('files')|uc_first }} {{ tables['file']|format_tab_number|safe }}</a></li>
+        <li><a href="#tab-file">{{ _('files')|uc_first }} {{ tables['file']|format_tab_number }}</a></li>
     </ul>
     <div id="tab-info">
         <div class="toolbar">
             {% if 'contributor'|is_authorized %}
                 {{ _('edit')|button(url_for('actor_update', id_=actor.id)) }}
-                {{ actor|display_delete_link|safe }}
+                {{ actor|display_delete_link }}
             {% endif %}
-            {{ actor.id|bookmark_toggle|safe }}
+            {{ actor.id|bookmark_toggle }}
         </div>
         <h1>{{ actor.name }}</h1>
         <div>
