--- a/openatlas/templates/admin/orphans.html
+++ b/openatlas/templates/admin/orphans.html
@@ -8,12 +8,12 @@
 </div>
 <div id="tabs" class="tabs-container">
     <ul>
-        <li><a href="#tab-orphan">{{ _('orphans')|uc_first }} {{ tables['orphans']|format_tab_number|safe }}</a></li>
-        <li><a href="#tab-unlinked">{{ _('unlinked')|uc_first }} {{ tables['unlinked']|format_tab_number|safe }}</a></li>
-        <li><a href="#tab-nodes">{{ _('type')|uc_first }} {{ tables['nodes']|format_tab_number|safe }}</a></li>
-        <li><a href="#tab-missing-files">{{ _('missing files')|uc_first }} {{ tables['missing_files']|format_tab_number|safe }}</a></li>
-        <li><a href="#tab-orphaned-files">{{ _('orphaned files')|uc_first }} {{ tables['orphaned_files']|format_tab_number|safe }}</a></li>
-        <li><a href="#tab-circular">{{ _('circular dependencies')|uc_first }} {{ tables['circular']|format_tab_number|safe }}</a></li>
+        <li><a href="#tab-orphan">{{ _('orphans')|uc_first }} {{ tables['orphans']|format_tab_number }}</a></li>
+        <li><a href="#tab-unlinked">{{ _('unlinked')|uc_first }} {{ tables['unlinked']|format_tab_number }}</a></li>
+        <li><a href="#tab-nodes">{{ _('type')|uc_first }} {{ tables['nodes']|format_tab_number }}</a></li>
+        <li><a href="#tab-missing-files">{{ _('missing files')|uc_first }} {{ tables['missing_files']|format_tab_number }}</a></li>
+        <li><a href="#tab-orphaned-files">{{ _('orphaned files')|uc_first }} {{ tables['orphaned_files']|format_tab_number }}</a></li>
+        <li><a href="#tab-circular">{{ _('circular dependencies')|uc_first }} {{ tables['circular']|format_tab_number }}</a></li>
     </ul>
     <div id="tab-orphan">
         {% if tables['orphans'].rows and 'admin'|is_authorized %}
