--- a/openatlas/templates/event/view.html
+++ b/openatlas/templates/event/view.html
@@ -8,23 +8,23 @@
     <ul>
         <li><a href="#tab-info">{{ _('info')|uc_first }}</a></li>
         {% if tables['subs'].rows %}
-            <li><a href="#tab-subs">{{ _('sub events')|uc_first }} {{ tables['subs']|format_tab_number|safe }}</a></li>
+            <li><a href="#tab-subs">{{ _('sub events')|uc_first }} {{ tables['subs']|format_tab_number }}</a></li>
         {% endif %}
         {% if gis_data %}
             <li><a href="#tab-map" id="map-tab-id">{{ _('map')|uc_first }}</a></li>
         {% endif %}
-        <li><a href="#tab-source">{{ _('source')|uc_first }} {{ tables['source']|format_tab_number|safe }}</a></li>
-        <li><a href="#tab-actor">{{ _('actor')|uc_first }} {{ tables['actor']|format_tab_number|safe }}</a></li>
-        <li><a href="#tab-reference">{{ _('reference')|uc_first }} {{ tables['reference']|format_tab_number|safe }}</a></li>
-        <li><a href="#tab-file">{{ _('files')|uc_first }} {{ tables['file']|format_tab_number|safe }}</a></li>
+        <li><a href="#tab-source">{{ _('source')|uc_first }} {{ tables['source']|format_tab_number }}</a></li>
+        <li><a href="#tab-actor">{{ _('actor')|uc_first }} {{ tables['actor']|format_tab_number }}</a></li>
+        <li><a href="#tab-reference">{{ _('reference')|uc_first }} {{ tables['reference']|format_tab_number }}</a></li>
+        <li><a href="#tab-file">{{ _('files')|uc_first }} {{ tables['file']|format_tab_number }}</a></li>
     </ul>
     <div id="tab-info">
         <div class="toolbar">
             {% if 'contributor'|is_authorized %}
                 {{ _('edit')|button(url_for('event_update', id_=event.id)) }}
-                {{ event|display_delete_link|safe }}
+                {{ event|display_delete_link }}
             {% endif %}
-            {{ event.id|bookmark_toggle|safe }}
+            {{ event.id|bookmark_toggle }}
         </div>
         <h1>{{ event.name }}</h1>
         <div>
