--- a/openatlas/templates/place/view.html
+++ b/openatlas/templates/place/view.html
@@ -12,20 +12,20 @@
     <div id="tabs" class="tabs-container col">
         <ul>
             <li><a href="#tab-info">{{ _('info')|uc_first }}</a></li>
-            <li><a href="#tab-source">{{ _('source')|uc_first }} {{ tables['source']|format_tab_number|safe }}</a></li>
-            <li><a href="#tab-event">{{ _('event')|uc_first }} {{ tables['event']|format_tab_number|safe }}</a></li>
+            <li><a href="#tab-source">{{ _('source')|uc_first }} {{ tables['source']|format_tab_number }}</a></li>
+            <li><a href="#tab-event">{{ _('event')|uc_first }} {{ tables['event']|format_tab_number }}</a></li>
             {% if tables['actor'].rows %}
-                <li><a href="#tab-actor">{{ _('actor')|uc_first }} {{ tables['actor']|format_tab_number|safe }}</a></li>
+                <li><a href="#tab-actor">{{ _('actor')|uc_first }} {{ tables['actor']|format_tab_number }}</a></li>
             {% endif %}
-            <li><a href="#tab-reference">{{ _('reference')|uc_first }} {{ tables['reference']|format_tab_number|safe }}</a></li>
-            <li><a href="#tab-file">{{ _('files')|uc_first }} {{ tables['file']|format_tab_number|safe }}</a></li>
+            <li><a href="#tab-reference">{{ _('reference')|uc_first }} {{ tables['reference']|format_tab_number }}</a></li>
+            <li><a href="#tab-file">{{ _('files')|uc_first }} {{ tables['file']|format_tab_number }}</a></li>
             {% if object_.system_type == 'place' %}
-                <li><a href="#tab-feature">{{ _('feature')|uc_first }} {{ tables['feature']|format_tab_number|safe }}</a></li>
+                <li><a href="#tab-feature">{{ _('feature')|uc_first }} {{ tables['feature']|format_tab_number }}</a></li>
             {% elif object_.system_type == 'feature' %}
-                <li><a href="#tab-stratigraphic-unit">{{ _('stratigraphic unit')|uc_first }} {{ tables['stratigraphic-unit']|format_tab_number|safe }}</a></li>
+                <li><a href="#tab-stratigraphic-unit">{{ _('stratigraphic unit')|uc_first }} {{ tables['stratigraphic-unit']|format_tab_number }}</a></li>
             {% elif object_.system_type == 'stratigraphic unit' %}
-                <li><a href="#tab-find">{{ _('find')|uc_first }} {{ tables['find']|format_tab_number|safe }}</a></li>
-                <li><a href="#tab-human-remains">{{ _('human remains')|uc_first }} {{ tables['human-remains']|format_tab_number|safe }}</a></li>
+                <li><a href="#tab-find">{{ _('find')|uc_first }} {{ tables['find']|format_tab_number }}</a></li>
+                <li><a href="#tab-human-remains">{{ _('human remains')|uc_first }} {{ tables['human-remains']|format_tab_number }}</a></li>
             {% endif %}
         </ul>
         <div id="tab-info">
@@ -33,10 +33,10 @@
                 {% if 'contributor'|is_authorized %}
                     <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_update', id_=object_.id) }}">{{ _('edit')|uc_first }}</a>
                     {% if not subunits %}
-                        {{ object_|display_delete_link|safe }}
+                        {{ object_|display_delete_link }}
                     {% endif %}
                 {% endif %}
-                {{ object_.id|bookmark_toggle|safe }}
+                {{ object_.id|bookmark_toggle }}
             </div>
             <h1>{{ object_.name }}</h1>
             <div>
