--- a/openatlas/templates/reference/view.html
+++ b/openatlas/templates/reference/view.html
@@ -7,24 +7,24 @@
 <div id="tabs" class="tabs-container">
     <ul>
         <li><a href="#tab-info">{{ _('info')|uc_first }}</a></li>
-        <li><a href="#tab-source">{{ _('source')|uc_first }} {{ tables['source']|format_tab_number|safe }}</a></li>
-        <li><a href="#tab-event">{{ _('event')|uc_first }} {{ tables['event']|format_tab_number|safe }}</a></li>
-        <li><a href="#tab-actor">{{ _('actor')|uc_first }} {{ tables['actor']|format_tab_number|safe }}</a></li>
-        <li><a href="#tab-place">{{ _('place')|uc_first }} {{ tables['place']|format_tab_number|safe }}</a></li>
+        <li><a href="#tab-source">{{ _('source')|uc_first }} {{ tables['source']|format_tab_number }}</a></li>
+        <li><a href="#tab-event">{{ _('event')|uc_first }} {{ tables['event']|format_tab_number }}</a></li>
+        <li><a href="#tab-actor">{{ _('actor')|uc_first }} {{ tables['actor']|format_tab_number }}</a></li>
+        <li><a href="#tab-place">{{ _('place')|uc_first }} {{ tables['place']|format_tab_number }}</a></li>
         {% for table_name in ['feature', 'stratigraphic-unit', 'find'] %}
             {% if tables[table_name].rows %}
-                <li><a href="#tab-{{ table_name }}">{{ _(table_name)|uc_first }} {{ tables[table_name]|format_tab_number|safe }}</a></li>
+                <li><a href="#tab-{{ table_name }}">{{ _(table_name)|uc_first }} {{ tables[table_name]|format_tab_number }}</a></li>
             {% endif %}
         {% endfor %}
-        <li><a href="#tab-file">{{ _('files')|uc_first }} {{ tables['file']|format_tab_number|safe }}</a></li>
+        <li><a href="#tab-file">{{ _('files')|uc_first }} {{ tables['file']|format_tab_number }}</a></li>
     </ul>
     <div id="tab-info">
         <div class="toolbar">
             {% if 'contributor'|is_authorized %}
                 <a class="btn btn-outline-primary btn-sm" href="{{ url_for('reference_update', id_=reference.id) }}">{{ _('edit')|uc_first }}</a>
-                {{ reference|display_delete_link|safe }}
+                {{ reference|display_delete_link }}
             {% endif %}
-            {{ reference.id|bookmark_toggle|safe }}
+            {{ reference.id|bookmark_toggle }}
         </div>
         <h1>{{ reference.name }}</h1>
         <div>
