--- a/openatlas/templates/translation/view.html
+++ b/openatlas/templates/translation/view.html
@@ -15,6 +15,6 @@
     {% endif %}
 </div>
 <h1>{{ translation.name }}</h1>
-{{ info|display_info|safe }}
-{{ translation|description|safe }}
+{{ info|display_info }}
+{{ translation|description }}
 {% endblock %}
