--- a/openatlas/templates/types/index.html
+++ b/openatlas/templates/types/index.html
@@ -83,7 +83,7 @@
                                 {% if node.description %}
                                     <div class="description">
                                         <h2>{{ _('description')|uc_first }}</h2>
-                                        <p style="width:40em;">{{ node.description|safe }}</p>
+                                        <p style="width:40em;">{{ node.description }}</p>
                                     </div>
                                 {% endif %}
                             </div>
