--- a/openatlas/templates/model/class_view.html
+++ b/openatlas/templates/model/class_view.html
@@ -7,7 +7,7 @@
         <p>
             <strong>{{ _('info')|uc_first }}</strong>
         </p>
-        {{ info|display_info|safe }}
+        {{ info|display_info }}
     </div>
     {% if tables['super'].rows %}
         <div style="float:left;padding-right:2em;">
