--- a/openatlas/templates/object/view.html
+++ b/openatlas/templates/object/view.html
@@ -21,10 +21,10 @@
         <h1>{{ object_.name }}</h1>
         <div>
             <div style="float:left;">
-                {{ info|display_info|safe }}
-                {{ object_|note|safe }}
-                {{ object_|description|safe }}
-                {{ object_|api_link|safe }}
+                {{ info|display_info }}
+                {{ object_|note }}
+                {{ object_|description }}
+                {{ object_|api_link }}
             </div>
             <div style="clear:both;"></div>
         </div>
