--- a/openatlas/templates/place/view.html
+++ b/openatlas/templates/place/view.html
@@ -40,13 +40,13 @@
             </div>
             <h1>{{ object_.name }}</h1>
             <div>
-                {{ profile_image_id|display_profile_image|safe }}
+                {{ profile_image_id|display_profile_image }}
                 <div style="float:left;">
-                    {{ info|display_info|safe }}
-                    {{ object_|note|safe }}
-                    {{ object_|display_external_references|safe }}
-                    {{ object_|description|safe }}
-                    {{ object_|api_link|safe }}
+                    {{ info|display_info }}
+                    {{ object_|note }}
+                    {{ object_|display_external_references }}
+                    {{ object_|description }}
+                    {{ object_|api_link }}
                 </div>
                 <div style="clear:both;"></div>
             </div>
