--- a/openatlas/templates/user/view.html
+++ b/openatlas/templates/user/view.html
@@ -15,7 +15,7 @@
             {% endif %}
         </div>
     {% endif %}
-    {{ info|display_info|safe }}
+    {{ info|display_info }}
     <a href="{{ url_for('user_activity', user_id=user.id) }}">{{ _('activity')|uc_first }}</a>
-    {{ user|description|safe }}
+    {{ user|description }}
 {% endblock %}
